--- a/meta.yaml
+++ b/meta.yaml
@@ -17,7 +17,7 @@ build:
 requirements:
   host:
     - python >=3.7,<4.0
-    - poetry_core >=1.0.0
+    - poetry-core >=1.0.0
     - pip
   run:
     - python >=3.7.0,<4.0.0
