--- a/meta.yaml
+++ b/meta.yaml
@@ -27,7 +27,7 @@ requirements:
 
 outputs:
   - name:  {{ name|lower }}
-  - type: conda
+    type: conda
 
 about:
   home: https://github.com/monim67/django-bootstrap-datepicker-plus
