--- a/meta.yaml
+++ b/meta.yaml
@@ -26,7 +26,7 @@ requirements:
     - typing-extensions *
 
 outputs:
-  - name:  {{ name|lower }}
+  - name:  django-bootstrap-datepicker-plus
     type: conda
 
 about:
